<?xml version="1.0"?>
<package format="2">
  <name>tesseract_monitoring</name>
  <version>0.21.1</version>
  <description>The tesseract_monitoring package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract_rosutils</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
